k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp1
  template:
    metadata:
      labels:
        app: myapp1
    spec:
      containers:
        - name: myapp1
          image: 339712697220.dkr.ecr.eu-north-1.amazonaws.com/jpademo
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: myapp1-service
spec:
  selector:
    app: myapp1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
